istio/06-proxying-mtls-connection/mesh/01-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: external-service-ardikabs-com
  labels:
    squad: "foundation"
    tribe: "system"
  namespace: <RESERVED_NAMESPACE>
spec:
  exportTo:
    - "*"
  host: external-service.ardikabs.com
  workloadSelector: # works only when DR is applied in the same namespace only
    matchLabels:
      app: podinfo
  subsets:
    - name: mtls-default
      trafficPolicy:
        portLevelSettings:
          - port:
              number: 443
            tls:
              mode: MUTUAL
              credentialName: external-service-ardikabs-com-mtls-cert # this must match the secret created earlier to hold client certs, and works only when DR has a workloadSelector
